[package]
name = "nonogram"
version = "0.1.0"
authors = ["Jonathan <jonathan.klimt@rwth-aachen.de>"]

[dependencies]
termion = "1.5"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false # Controls whether the compiler passes `-g`
